fix: text-align: justify

--- a/style.css
+++ b/style.css
@@ -447,6 +447,7 @@ h6 {
 p {
 	margin: 0 0 1.5em;
 	padding: 0;
+    text-align: justify;
 }
 
 dfn,
@@ -465,6 +466,7 @@ blockquote {
 	margin: 0;
 	overflow: hidden;
 	padding: 0;
+    text-align: justify;
 }
 
 blockquote cite {
@@ -726,7 +728,12 @@ ul,
 ol {
 	margin: 5px 0;
     padding-left: 24px;
-    vertical-align: baseline
+    vertical-align: baseline;
+    text-align: justify;
+}
+
+dl {
+    text-align: justify;
 }
 
 ul {
@@ -1119,8 +1126,8 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 600px;
-	padding-left: 3em;
-	padding-right: 3em;
+	padding-left: 2em;
+	padding-right: 2em;
 }
 
 .wrap:after {
@@ -2090,6 +2097,11 @@ body .entry-header {
     font-size: 0.75rem;
     display: block;
     text-align: right;
+}
+
+.comment-content .at-user {
+    color: #eb5055;
+    font-weight: 600;
 }
 
 .comment-respond .icon-cancel-reply,
